[tool.poetry]
name = "ruia-peewee-async"
version = "0.1.0"
description = "A Ruia plugin that uses the peewee-async to store data to MySQL"
authors = ["Jack Deng <dlwxxxdlw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2"
ruia = "^0.8.4"
peewee-async = "^0.8.0"
aiomysql = {version = "^0.1.1", optional = true}
aiopg = {version = "^1.3.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pdbpp = "^0.10.3"
pylint = "^2.14.5"
pytest-docker = "^1.0.0"

[tool.poetry.extras]
aiomysql = ["aiomysql"]
aiopg = ["aiopg"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
