[tool.poetry]
name = "ruia-peewee-async"
version = "1.0.4"
description = "A Ruia plugin that uses the peewee-async to store data to MySQL"
authors = ["Jack Deng <dlwxxxdlw@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JackTheMico/ruia-peewee-async"
repository = "https://github.com/JackTheMico/ruia-peewee-async"
keywords = ["ruia", "plugin", "mysql", "postgresql"]
classifiers = [
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE"]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_source = "tag"

[tool.poetry.dependencies]
python = "^3.7.2"
ruia = "^0.8.4"
peewee-async = "^0.8.0"
aiomysql = {version = "^0.1.1", optional = true}
aiopg = {version = "^1.3.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pdbpp = "^0.10.3"
pylint = "^2.14.5"
pytest-docker = "^1.0.0"
cryptography = "^37.0.4"
pytest-asyncio = "^0.19.0"
pytest-dependency = "^0.5.1"
psycopg2 = "^2.9.3"
PyMySQL = "^1.0.2"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
aiomysql = ["aiomysql"]
aiopg = ["aiopg"]
all = ["aiomysql", "aiopg"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
